src/App.css
/* ... */
@media (max-width: 1240px) {
  .body_box .home-content {
    padding-top: 200px;
  }
  .body_box .home-content .top-heading-content h1 {
    font-size: 38px;
  }
  .body_box .home-content .top-heading-content h5 {
    font-size: 20px;
  }
  .body_box .home-content .top-heading-content h3 {
    font-size: 24px;
  }
  .body_box .home-content .animated-content {
    font-size: 22px;
  }
  .body_box .home-content .top-heading-content {
    padding-right: 10px;
  }
  .location_inner.about_us ul.links_resousrces li {
    line-height: 20px;
    font-size: 15px;
  }
}
@media (max-width: 991px) {
  .body_box {
    /* background: url(./images/main_bg.jpeg); */
    height: auto;
    background-size: cover;
    padding-bottom: 90px;
    min-height: 100vh;
    background-position: center;
  }
  .container {
    max-width: 100%;
    margin: 0 auto;
  }
  .home_page_content .home-widget {
    width: 40%;
  }
  .home_page_content .home_content {
    width: 60%;
  }
  .body_box .home-content .top-heading-content h1 {
    font-size: 30px;
  }
  .body_box .home-content .animated-content {
    font-size: 18px;
  }
}

@media (max-width: 767px) {
  .mobile_menu {
    display: block !important;
    float: right;
    margin-top: 8px;
    margin-right: 10px;
  }
  .menu-bar{
    cursor: pointer;
  }
  .body_box {
    padding-bottom: 200px;
  }
  header .header_navigation {
    position: fixed;
    width: 100%;
    top: 70px;
    left: -100%;
    background: #061929;
    opacity: 0;
    visibility: hidden;
    padding: 20px 15px;
    transition: 0.5s;
    text-align: left;
  }
  header .logo_box {
    width: 100%;
  }
  header .header_navigation ul.navigation li.nav-items {
    margin: 10px 10px;
    width: 100%;
  }
  .mobile_menu img {
    max-width: 24px;
    margin-left: 15px;
    vertical-align: middle;
    width: 24px;
  }
  .mobile_menu a img {
    margin-top: -4px;
  }
  header .header_navigation .social_nav {
    display: none;
  }

  header .header_navigation.menu_open {
    visibility: visible;
    opacity: 1;
    left: 0;
  }
  header .header_navigation ul.navigation li.nav-items a {
    font-size: 18px;
  }
  .home-content .we-are-running {
    width: 100%;
  }
  .logo_box a,
  .logo_box a span {
    font-size: 24px;
  }
  .body_box .home-content .top-heading-content h3,
  .body_box .home-content .top-heading-content h5 {
    font-size: 20px;
  }
  .body_box .home-content .top-heading-content h1 {
    font-size: 38px;
  }
  .body_box .home-content .animated-content {
    font-size: 24px;
    margin-top: 10px;
    flex-wrap: wrap;
  }
  .home-content.location-page .location_map,
  .home-content.location-page .loaction_content {
    width: 100%;
  }
  .body_box .home-content.location-page iframe {
    max-width: 100%;
    margin-top: 30px;
  }
  .home-content .we-are-running h3 {
    font-size: 20px;
  }
  footer p small {
    font-size: 9px;
    line-height: 12px;
  }
  .home-content .servers-contnet .location_inner p img {
    max-width: 30px;
  }
  .body_box .home-content .top-heading-content h1 {
    font-size: 32px;
  }
  .home_page_content .home_content {
    width: 100%;
  }
  .home_page_content .home-widget {
    width: 100%;
    margin-top: 40px;
  }
}
@media (max-width: 479px) {
  .home-content .we-are-running h3 img {
    max-width: 50px;
    height: auto;
  }
  .home-content .we-are-running h3 {
    font-size: 17px;
  }
  .logo_box a,
  .logo_box a span {
    font-size: 22px;
    float: left;
  }
  .logo_box .logo img {
    max-width: 50px;
    margin-top: -10px;
    height: auto;
  }
  .body_box .home-content .top-heading-content h1 {
    font-size: 32px;
  }
  .home-content.contact-page h3 {
    font-size: 16px;
    line-height: 22px;
  }
  .body_box .home-content .animated-content .text {
    margin-top: 10px;
    width: 100%;
    min-height: 40px;
  }
}


/* Styles for Firefox */
* {
  scrollbar-width: thin; /* 'auto' or 'thin' */
  scrollbar-color: #5e5e5e #2e2e2e; /* thumb and track color */
}

#countdown-element{
  width: 20px;
}

.coinmarketcap-currency-widget{
  border: 2px solid #e1e5ea;
  border-radius: 10px;
  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
  min-width: 285px;
  background: rgba(8, 36, 58, 0.4);
  overflow: hidden;
}
.coinmarketcap-currency-widget .header{
  display: flex;
  padding: 12px 0;
  justify-content: space-evenly;
  border-bottom: 1px solid #e1e5ea;
}
.coinmarketcap-currency-widget .header .logo{
flex: 0.3;
}
.coinmarketcap-currency-widget .header .logo > img{
 width: 46px;
    height: 46px;

}
.coinmarketcap-currency-widget .header .title > h2 {
  font-size: 18px;

}

.coinmarketcap-currency-widget .header .title > h4 {
  font-size: 20px;
}
.coinmarketcap-currency-widget .header .title > h4 > span{
  font-size: 14px;
  font-weight: 500;
}
.coinmarketcap-currency-widget .header .title > h4 > .red-text{
  color: #d94040;
}

.coinmarketcap-currency-widget .header .title > h2 >a{
  color: rgb(16, 112, 224) !important;
}

.coinmarketcap-currency-widget .details{
  display: flex;
  justify-content: space-between;
  border-bottom: 1px solid #e1e5ea;

}
.coinmarketcap-currency-widget .details > div{
  flex: 1;
  text-align: center;
  float: left;
  font-size: 12px;
  padding: 12px 0;
  border-right: 1px solid #e1e5ea;
  line-height: 1em;

  
}
.coinmarketcap-currency-widget .details > div > p{
  margin-bottom: 10px;
  padding: 0;
}
.coinmarketcap-currency-widget .details > div > span{
  font-size: 16px;
}
.coinmarketcap-currency-widget .footer{
  text-align: center;
  clear: both;
  font-size: 12px;
  font-style: italic;
  padding: 8px 0;
  text-decoration: none;
    color: rgb(16, 112, 224);
}

